add room logics, add priest, fixed class-server-creator
